# ESP32_S3_TEST_AI

./: .gitignore  CMakeLists.txt  DNESP32S3B_硬件引脚对照表.md  ESP32+ONENET+OTA开发经验.md  HANDOFF_PROMPT_FOR_NEW_CHAT.md  LVGL_UI_编译烧录调试与避坑经验.md  LVGL中间层结构规范.md  LVGL移植_智能体避坑手册.md  LVGL移植教程_通俗版.md  README.md  partitions-16MiB.csv  sdkconfig  ui_page_sim.c  ui_page_sim.h
components/AppBackend/: CMakeLists.txt  Kconfig  app_backend.c  app_backend_internal.h  backend_store.c  backend_store.h  mqtt_service.c  mqtt_service.h  network_diag_service.c  network_diag_service.h  ota_service.c  ota_service.h  time_service.c  time_service.h  weather_service.c  weather_service.h  wifi_service.c  wifi_service.h
components/AppBackend/include/: app_backend.h  app_backend_types.h
components/BSP/: CMakeLists.txt
components/BSP/IIC/: iic.c
components/BSP/LCD/: lcd.c
components/BSP/QMI8658A/: imu.c  imu.h  qmi8658a.c  qmi8658a.h
components/GyroBle/: CMakeLists.txt  gyro_ble.c
components/GyroBle/include/: gyro_ble.h
components/Middlewares/: CMakeLists.txt  README.md
components/Middlewares/lvgl_port/: CMakeLists.txt  lvgl_port.c  lvgl_port.h
components/UI/: CMakeLists.txt
components/UI/core/: ui.c  ui_data_bindings.c  ui_mirror.c  ui_page_anim.c  ui_page_manager.c  ui_page_registry.c  ui_page_stack.c
components/UI/include/: ui.h  ui_data_bindings.h  ui_fonts.h  ui_mirror.h  ui_page_anim.h  ui_page_ids.h  ui_page_iface.h  ui_page_manager.h  ui_page_registry.h  ui_page_stack.h  ui_types.h
components/UI/pages/: page_about.c  page_about.h  page_firmware.c  page_firmware.h  page_gyro.c  page_gyro.h  page_home.c  page_home.h  page_settings.c  page_settings.h  page_status.c  page_status.h  page_wifi.c  page_wifi.h
docs/lvgl/: README.md  UI开发规范手册.md  UI设计要求_V1.1_Figma_1to1.md  UI调试手册.md
docs/superpowers/changelogs/: 2026-04-28-ota-firmware-ui-backend-v1.md
docs/superpowers/plans/: 2026-04-25-lvgl-page-framework.md  2026-04-27-wifi-time-weather-backend-v1.md  2026-04-28-ota-ui-backend-adaptation-v1.md
docs/superpowers/specs/: 2026-04-24-lvgl-page-framework-design.md  2026-04-27-wifi-time-weather-backend-design.md
main/: CMakeLists.txt  main.c
main/APP/: lvgl_demo.h
simulator/: CMakeLists.txt
simulator/include/: lv_conf.h
simulator/src/: lv_port_pc_sdl.c  lv_port_pc_sdl.h  main.c
tools/: gen_ui_fonts.py
tools/web_ble_mirror/: index.html
web/: gyro_ble_viewer.html
