idf_component_register(
    SRCS
        "core/ui.c"
        "core/ui_data_bindings.c"
        "core/ui_mirror.c"
        "core/ui_page_anim.c"
        "core/ui_page_manager.c"
        "core/ui_page_registry.c"
        "core/ui_page_stack.c"
        "pages/page_home.c"
        "pages/page_settings.c"
        "pages/page_status.c"
        "pages/page_firmware.c"
        "pages/page_gyro.c"
        "pages/page_wifi.c"
        "pages/page_about.c"
        "fonts/generated/ui_font_sc_11.c"
        "fonts/generated/ui_font_sc_12.c"
        "fonts/generated/ui_font_sc_12_heavy.c"
        "fonts/generated/ui_font_sc_13.c"
        "fonts/generated/ui_font_sc_14.c"
        "fonts/generated/ui_font_sc_14_bold.c"
        "fonts/generated/ui_font_sc_18.c"
        "fonts/generated/ui_font_sc_18_heavy.c"
        "fonts/generated/ui_font_sc_24.c"
        "fonts/generated/ui_font_sc_30.c"
    INCLUDE_DIRS
        "include"
        "pages"
    REQUIRES lvgl AppBackend GyroBle esp_timer
)
